# Robotics

./: .gitignore
EV3-workspace/Eragileak/: koloreak.py  laukia.py  lerro_jarraitzailea.py  odom.py  talka.py  test.py  ultrasoinu.py
EV3-workspace/Lehiaketa/: arch.txt  pizzaDelivery.py
PlayerStage/kromataxia/: CMakeLists.txt
PlayerStage/kromataxia/src/: kromaTaxia.cpp
PlayerStage/mapa/src/: args.h  mapping.cc
PlayerStage/nabegazioa/: astar.py
PlayerStage/nabegazioa/vfh/: CMakeLists.txt
PlayerStage/nabegazioa/vfh/scripts/: vfhPlanifikatzailea.py
PlayerStage/nabegazioa/vfh/src/: vfhPlanifikatzailea.cpp
PlayerStage/nabegazioa/vfh/world/: vfh.cfg  vfh.world
PlayerStage/nabegazioa/wavefront/: CMakeLists.txt
PlayerStage/nabegazioa/wavefront/scripts/: wave.py
PlayerStage/nabegazioa/wavefront/src/: wave.cpp
PlayerStage/nabegazioa/wavefront/world/: wave-amcl.cfg  wave-amcl.world  wavefront.world  wavefront1.cfg  wavefront2.cfg
PlayerStage/oekidin/: CMakeLists.txt
PlayerStage/oekidin/data/: hospitalSec.csv  stat0sec3.csv  stat0sec5.csv  stat0sec8.csv  stat1sec3.csv  stat1sec5.csv  stat1sec8.csv  stat2sec3.csv  stat2sec5.csv  stat2sec8.csv
PlayerStage/oekidin/graphs/: makegraph.py
PlayerStage/oekidin/src/: laserInfo.cpp  oztopoakEkiditen-TODO.cpp  oztopoakEkiditen.cpp
PlayerStage/oekidin/world/: hospital.cfg  hospital.world  simple.world
PlayerStage/paretari-jarraitu-kp/src/: paretariJarraitu.cpp
PlayerStage/paretari-jarraitu-ktm/src/: paretariJarraituKTM.cpp
PlayerStage/psTest/: CMakeLists.txt
PlayerStage/psTest/scripts/: psTest.py
PlayerStage/psTest/src/: psTest.cpp
PlayerStage/square/: CMakeLists.txt
PlayerStage/square/data/: squareGoTo_s1  squareGoTo_s1_cw  squareOdom_s2_no_gps  squareOdom_s6_no_gps  squareTime_s1_autoAdjust  squareTime_s1_manuallyAdjusted  squareTime_s1_manuallyAdjusted_cw
PlayerStage/square/scripts/: square-TODO.py
PlayerStage/square/src/: square.cpp
PlayerStage/square/world/: simple.world
